# bangkok-lakehouse

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.spark  LEARNING.md  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
dags/: traffy_ingest.py
docs/: EXECUTION.md  contracts.md  data_model.md
include/: storage.py  traffy.py
spark/: proof_queries.py
spark/quality/: silver_checks.py
spark/transforms/: gold_traffy.py  silver_traffy.py
tests/: conftest.py  test_gold.py  test_quality.py  test_silver.py  test_storage.py  test_traffy.py
