[project]
name = "bangkok-lakehouse"
version = "0.1.0"
description = "Incremental medallion lakehouse over live Bangkok Traffy Fondue civic-complaint data"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = import sorting, UP = modern syntax, B = bug-prone patterns
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]   # put repo root on sys.path so `include` imports under bare `pytest`
